--- a/app/src/main/res/layout/fragment_board_add.xml
+++ b/app/src/main/res/layout/fragment_board_add.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:padding="16dp"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Наименование списка" />
 
     <EditText
         android:id="@+id/editTextBoardAddName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Название" />
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/buttonBoardAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="32dp"
         android:text="Добавить" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
