--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -10,7 +10,6 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayoutBoardTopBar"
             android:layout_width="match_parent"
@@ -36,18 +35,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_drop_down"
+                app:layout_constraintBottom_toBottomOf="@id/textBoardName"
                 app:layout_constraintStart_toEndOf="@+id/textBoardName"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/textBoardName" />
 
-            <CheckBox
-                android:id="@+id/checkBoxBoardOnlyPersonal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Только\nмои"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.Kanban.Title3"
+            <Button
+                app:backgroundTint="@color/red"
+                android:text="Удалить\nсписок"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
