--- a/app/src/main/res/layout/fragment_board_add.xml
+++ b/app/src/main/res/layout/fragment_board_add.xml
@@ -29,9 +29,9 @@
 
     <Button
         android:id="@+id/buttonBoardAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="32dp"
+        android:layout_marginTop="32dp"
         android:text="Добавить" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
